# stock-trading-platform

./: .gitignore  README.md  celery-redis-commands  requirements.txt
stock_trading/: Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
stock_trading/app/: admin.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
stock_trading/stock_trading/: .dockerignore  celery.py  settings.py  urls.py
